--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Entre el pueblo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://conhecacoreia.github.io/" />
+    <meta property="og:title" content="Exposição Aniversário Kim Jong Il" />
+    <meta property="og:description" content="Exposição de fotos por ocasião do 57º aniversário do início do trabalho de Kim Jong Il no Comitê Central do Partido.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/ConhecaCoreia/ConhecaCoreia.github.io/master/images/bandeira.png" />
+
+    <title>Exposição Aniversário Kim Jong Il</title>
   </head>
   <body>
     <div id="app"></div>
