--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://conhecacoreia.github.io/" />
-    <meta property="og:title" content="Exposição Aniversário Kim Jong Il" />
+    <meta property="og:title" content="Exposição virtual «Entre o povo»" />
     <meta property="og:description" content="Exposição de fotos por ocasião do 57º aniversário do início do trabalho de Kim Jong Il no Comitê Central do Partido.">
     <meta property="og:image" content="https://raw.githubusercontent.com/ConhecaCoreia/ConhecaCoreia.github.io/master/images/bandeira.png" />
 
-    <title>Exposição Aniversário Kim Jong Il</title>
+    <title>Exposição virtual «Entre o povo»</title>
   </head>
   <body>
     <div id="app"></div>
